fix k8x